infra/k8s/base/video-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-deployment
spec:
  selector:
    matchLabels:
      app: video-service
  template:
    metadata:
      labels:
        app: video-service
    spec:
      volumes:
        - name: db-password
          secret:
            secretName: db-password
        - name: jwt-secrets
          secret:
            secretName: jwt-keys
      containers:
        - name: video-deployment
          image: watch-hub-video:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: db-password
              mountPath: "/etc/secrets/db_password"
              subPath: "db_password"
              readOnly: true
            - name: jwt-secrets
              mountPath: "/etc/secrets/jwt_public"
              subPath: "jwt_public"
              readOnly: true
