infra/k8s/base/video-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  selector:
    app: video-service
  ports:
  - port: 8080
    targetPort: 8080
